update routes and port#
