# routes/index.js
@@ -3,8 +3,8 @@ const routes = express.Router();
 
 routes.use('/', require('./swagger'));
 
-routes.use('/gardens', require('./vegetables.js'))
-routes.use('/gardens', require('./flowers.js'))
+routes.use('/vegetables', require('./vegetables.js'))
+routes.use('/flowers', require('./flowers.js'))
 
 routes.use(
     '/',
