# swagger.json
@@ -18,7 +18,147 @@
         "responses": {}
       }
     },
-    "/gardens/": {
+    "/vegetables/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "plantName": {
+                  "example": "any"
+                },
+                "scientificName": {
+                  "example": "any"
+                },
+                "countryOfOrigin": {
+                  "example": "any"
+                },
+                "bestEnvironment": {
+                  "example": "any"
+                },
+                "bestTimeToPlant": {
+                  "example": "any"
+                },
+                "whenToHarvest": {
+                  "example": "any"
+                },
+                "commonRecipes": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/vegetables/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "plantName": {
+                  "example": "any"
+                },
+                "scientificName": {
+                  "example": "any"
+                },
+                "countryOfOrigin": {
+                  "example": "any"
+                },
+                "bestEnvironment": {
+                  "example": "any"
+                },
+                "bestTimeToPlant": {
+                  "example": "any"
+                },
+                "whenToHarvest": {
+                  "example": "any"
+                },
+                "commonRecipes": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/flowers/": {
       "get": {
         "description": "",
         "produces": [
@@ -60,7 +200,7 @@
         }
       }
     },
-    "/gardens/{id}": {
+    "/flowers/{id}": {
       "get": {
         "description": "",
         "produces": [
